syntax="proto3";

package velora.game;

message HealthComponent 
{
    int32 health = 1;
    bool alive = 2; 
}
