syntax="proto3";

package velora.game;

message InputComponent
{
    int32 action = 1;
    uint64 tick = 2;
}