syntax="proto3";

import "math.proto";

package velora.game;

message VisualComponent 
{
    bool visible = 1;
    string vertex_buffer_name = 2;
    string shader_name = 3;
    Vec4 color = 4;
    Mat4 model_matrix = 5;
}